[tool.poetry]
name = "Changer ID3 Tag"
version = "0.0.1"
description = "легковесный и мощный инструмент на Python для глубокого парсинга и визуализации метаданных MP3-файлов формата ID3v2"
authors = ["ncesam <rybushkin09@bk.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.14"
poetry-core = "^2.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
